<resources>
    <string name="app_name">File Drive</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email*</string>
    <string name="prompt_password">Password*</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_file">FileActivity</string>
    <string name="tab_text_1">Drive</string>
    <string name="tab_text_2">Storage</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="login">login</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign Up</string>
    <string name="mobile_number">Mobile Number*</string>
    <string name="name">Name*</string>
    <string name="drive">Drive</string>
    <string name="storage">Storage</string>
    <string name="dialog_message">Made by CHENNUPATI BALU</string>
    <string name="dialog_title">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_file_drive">FileDriveActivity</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="manage">Manage</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_folder">New Folder</string>
    <string name="about">About</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_password">Send Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
</resources>